--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -32,6 +32,9 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net452" />
+  <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net452" />
+  <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net451" />
@@ -41,6 +44,6 @@
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Bootswatch.Lumen" version="3.2.0.0" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Bootswatch.Slate" version="3.2.0.0" targetFramework="net451" />
-  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
