Update: EF models and repository

--- a/GalleryMVC_With_Auth.Domain/App.config
+++ b/GalleryMVC_With_Auth.Domain/App.config
@@ -14,4 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DBcon" connectionString="data source=w07.hoster.by;initial catalog=belartbr_DB;persist security info=True;user id=belartbr_ramzay;password=Rz1995154650/0;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
