--- a/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
+++ b/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,8 +53,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IPicturesRepository.cs" />
-    <Compile Include="Concrete\DBcon.cs" />
     <Compile Include="Entities\Album.cs" />
+    <Compile Include="Entities\AspNetRole.cs" />
+    <Compile Include="Entities\AspNetUser.cs" />
+    <Compile Include="Entities\AspNetUserClaim.cs" />
+    <Compile Include="Entities\AspNetUserLogin.cs" />
+    <Compile Include="Entities\backup\Album.cs" />
+    <Compile Include="Entities\backup\Picture.cs" />
+    <Compile Include="Entities\Comment.cs" />
+    <Compile Include="Entities\C__MigrationHistory.cs" />
+    <Compile Include="Concrete\DBcon.cs" />
     <Compile Include="Entities\Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
