--- a/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
+++ b/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
@@ -64,12 +64,21 @@
     <Compile Include="Entities\C__MigrationHistory.cs" />
     <Compile Include="Concrete\DBcon.cs" />
     <Compile Include="Entities\Picture.cs" />
+    <Compile Include="Migrations\201510072004136_Initial.cs" />
+    <Compile Include="Migrations\201510072004136_Initial.Designer.cs">
+      <DependentUpon>201510072004136_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201510072004136_Initial.resx">
+      <DependentUpon>201510072004136_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
