--- a/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
+++ b/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
