--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -7,9 +7,7 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
@@ -22,9 +20,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-GalleryMVC_With_Auth-20150809012515.mdf;Initial Catalog=aspnet-GalleryMVC_With_Auth-20150809012515;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DBcon"
-         connectionString="Data Source=w07.hoster.by;Initial Catalog=belartbr_DB;Persist Security Info=True;User ID=belartbr_ramzay;Password=Rz1995154650/0;"
-         providerName="System.Data.SqlClient" />
+    <add name="DBcon" connectionString="Data Source=w07.hoster.by;Initial Catalog=belartbr_DB;Persist Security Info=True;User ID=belartbr_ramzay;Password=Rz1995154650/0;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -107,8 +103,7 @@
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet"
-           preCondition="integratedMode" />
+      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
     </handlers>
   </system.webServer>
   <runtime>
@@ -166,8 +161,7 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient"
-                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <elmah>
