--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -17,7 +17,9 @@
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
-  </configSections>
+  <sectionGroup name="jsEngineSwitcher">
+			<section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
+		<section name="v8" type="JavaScriptEngineSwitcher.V8.Configuration.V8Configuration, JavaScriptEngineSwitcher.V8" /><section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" /></sectionGroup></configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-GalleryMVC_With_Auth-20150809012515.mdf;Initial Catalog=aspnet-GalleryMVC_With_Auth-20150809012515;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DBcon" connectionString="Data Source=w07.hoster.by;Initial Catalog=belartbr_DB;Persist Security Info=True;User ID=belartbr_ramzay;Password=Rz1995154650/0;" providerName="System.Data.SqlClient" />
@@ -72,7 +74,11 @@
         <add namespace="MvcSiteMapProvider.Web.Html.Models" />
       </namespaces>
     </pages>
-  </system.web>
+  <!-- Uncomment if using IIS 7 Classic Mode, IIS 6, or Mono --><!--
+		<httpHandlers>
+			<add verb="GET" path="*.jsx" type="React.Web.JsxHandlerFactory, React.Web" />
+		</httpHandlers>
+		--></system.web>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
@@ -104,8 +110,14 @@
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
-    </handlers>
-  </system.webServer>
+    <remove name="Babel" /><add name="Babel" verb="GET" path="*.jsx" type="React.Web.BabelHandlerFactory, React.Web" preCondition="integratedMode" /></handlers>
+  <security>
+			<requestFiltering>
+				<hiddenSegments>
+					<add segment="ClearScript.V8" />
+				</hiddenSegments>
+			</requestFiltering>
+		</security></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -146,7 +158,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
@@ -173,4 +185,8 @@
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
       -->
   </glimpse>
-</configuration>
+<jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd"><core>
+			<engines>
+				<add name="V8JsEngine" type="JavaScriptEngineSwitcher.V8.V8JsEngine, JavaScriptEngineSwitcher.V8" />
+			<add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" /></engines>
+		</core></jsEngineSwitcher></configuration>
