--- a/GalleryMVC_With_Auth/Views/Web.config
+++ b/GalleryMVC_With_Auth/Views/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
@@ -18,7 +18,7 @@
         <add namespace="GalleryMVC_With_Auth" />
         <add namespace="MvcSiteMapProvider.Web.Html" />
         <add namespace="MvcSiteMapProvider.Web.Html.Models" />
-      </namespaces>
+      <add namespace="React.Web.Mvc" /></namespaces>
     </pages>
   </system.web.webPages.razor>
   <appSettings>
