--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -9,10 +9,14 @@
   <package id="Glimpse" version="1.8.6" targetFramework="net452" />
   <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net452" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Core" version="1.2.4" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.2.4" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8" version="1.2.4" targetFramework="net452" />
   <package id="Jmelosegui.Mvc.Googlemap" version="0.8.0.0" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="Jquery.LazyLoad" version="1.8.4" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="JSPool" version="0.3.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net452" />
@@ -33,6 +37,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="MsieJavaScriptEngine" version="1.5.1" targetFramework="net452" />
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net452" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net452" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net452" />
@@ -42,9 +47,12 @@
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="React.Core" version="2.1.0" targetFramework="net452" />
+  <package id="React.Web" version="2.1.0" targetFramework="net452" />
+  <package id="React.Web.Mvc4" version="2.1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Twitter.Bootstrap.Bootswatch.Lumen" version="3.2.0.0" targetFramework="net452" />
   <package id="Twitter.Bootstrap.Bootswatch.Slate" version="3.2.0.0" targetFramework="net452" />
-  <package id="WebActivatorEx" version="2.0.1" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
