--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -23,6 +23,10 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net452" />
@@ -41,7 +45,7 @@
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net452" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net452" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
