Add: ninject WebApi integration

--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -45,11 +45,12 @@
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net452" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net452" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="React.Core" version="2.1.0" targetFramework="net452" />
   <package id="React.Web" version="2.1.0" targetFramework="net452" />
