--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -51,8 +51,10 @@
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="React.Core" version="2.1.0" targetFramework="net452" />
+  <package id="react.js" version="0.13.1" targetFramework="net452" />
   <package id="React.Web" version="2.1.0" targetFramework="net452" />
   <package id="React.Web.Mvc4" version="2.1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
