Add: new reactJS view

--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -545,6 +545,7 @@
     <Content Include="Views\Images\Comments.cshtml" />
     <Content Include="Scripts\views\main.jsx" />
     <Content Include="Views\Home\tests.cshtml" />
+    <Content Include="Scripts\views\Found.jsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
